Update README.md with enhanced project description and features; add .DS_Store to .gitignore; remove unnecessary test files and UML documentation; refactor game controller logic for improved AI and player interactions.